fix(agent): replace List.of() with Collections.emptyList() for Java 8 compatibility
Co-authored-by: jbachorik <738413+jbachorik@users.noreply.github.com>